@@ -11,6 +11,8 @@ use App\Models\Departement;
 use App\Models\DepartementUser;
 use App\Models\Filiere;
 use App\Models\FiliereUser;
+use App\Models\Emploi;
+
 
 class ChefDepartementController extends Controller
 {
@@ -45,7 +47,7 @@ class ChefDepartementController extends Controller
         return redirect('/dashboard')->with('success', 'Announcement added successfully');
     }
 
-    public function addEmploi(Request $request)
+    public function makeReservation(Request $request)
 {
     $request->validate([
         'ID_salle' => 'required',
@@ -55,14 +57,13 @@ class ChefDepartementController extends Controller
         'Jours' => 'required',
         'raison' => 'required',
     ]);
-
     $departementId = $this->getChefDepId(auth()->user()->id_utilisateur);
-
     Emploi::create([
         'ID_salle' => $request->input('ID_salle'),
         'ID_prof' => $request->input('ID_prof'),
         'ID_module' => $request->input('ID_module'),
         'Crenaux' => $request->input('Crenaux'),
+        
         'Jours' => $request->input('Jours'),
         'raison' => $request->input('raison'),
         'ID_departement' => $departementId,
