@@ -49,3 +49,8 @@
 -Gave professeur/responsable the ability to change the status of demande thus visibility (traite doesn't show)
 -Removed profile picture
 -Added new routes
+
+## 24/01/2024:
+-Added so that the Responsable Pedagogique can make reservations for the salles that don't have a departement
+-Added so that the chef departement can make reservations for the salles of his departement, only with professors that teach a module that's in a filiere that's in that same departement.
+-Removed the ability to make reservations for professors and Responsable Filiere.
